# ESP-Feed

./: .gitignore  Cargo.toml  README.md  partitions.csv  sdkconfig.debug  sdkconfig.defaults
.cargo/: config.toml
extra/: Driver Analysis.ods
resources/: settings.html
src/: command.rs  datetime.rs  definitions.rs  display.rs  feed.rs  graphics.rs  http_client.rs  https_client.rs  interrupt.rs  lib.rs  main.rs  nvs.rs  server.rs  server_new.rs  simple.html  state.rs  stock.rs  storage.rs  styles.rs  wifi.rs
src/graphics/: display.rs  mod.rs  pages.rs  style.rs
src/graphics/views/: feed_group.rs  forecast.rs  forecast_row.rs  forecast_row_macro.rs  mod.rs  status_bar.rs
src/weather/: icons.rs  mod.rs  openweather_types.rs  weather.rs
storage/: 01d.tga  bw.tga  bw_old.tga  convert.sh  settings.htm
storage/settings/: overview.htm  personal.htm  rss.htm  stock.htm  wifi.htm
storage/weather/big/: 01d.tga  01n.tga  03d.tga  03n.tga  04n.tga  09d.tga  10n.tga  11n.tga  13d.tga  50d.tga  50n.tga
storage/weather/small/: 01d.tga  01n.tga  02d.tga  02n.tga  04d.tga  09n.tga  10d.tga  11n.tga  13n.tga  50d.tga  50n.tga
tools/: create-partition-table.sh  flash-app-release.sh  flash-app.sh  flash-nvs.sh  flash-partition-table.sh  flash-storage.sh
