[package]
name = "esp-feed"
version = "0.1.0"
authors = ["derek <christ.derek@gmail.com>"]
edition = "2018"
resolver = "2"

[patch.crates-io]
#smol = { git = "https://github.com/esp-rs-compat/smol" }
#polling = { git = "https://github.com/esp-rs-compat/polling" }
#socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
#esp-idf-sys = { git  = "https://github.com/derchr/esp-idf-sys.git" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["native", "experimental"]
native = ["esp-idf-sys/native"]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
log = "0.4"
esp-idf-sys = { version = "0.30", features = ["binstart"] }
esp-idf-svc = "0.36"
embedded-svc = "0.16"
esp-idf-hal = "0.32"
embedded-hal = "1.0.0-alpha.6"
#smol = "1.2.5"
xml-rs = "0.8.4"
time = { version = "0.3.5", features = ["macros", "formatting"] }
embedded-graphics = "0.7"
embedded-graphics-core = "0.3"
embedded-layout = "0.2"
embedded-text = "0.5"
ssd1306 = "0.7"
url = "2.2"
serde = "1.0"
serde_json = "1.0"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
