[package]
name = "esp-feed"
version = "0.2.0"
authors = ["derek <christ.derek@gmail.com>"]
edition = "2018"
resolver = "2"

[patch.crates-io]
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }
# epd-waveshare = { git = "https://github.com/derchr/epd-waveshare" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
# default = ["native", "experimental"]
default = ["experimental"]
native = ["esp-idf-sys/native"]
experimental = ["esp-idf-svc/experimental", "esp-idf-hal/experimental", "embedded-svc/experimental"]

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
log = "0.4"
esp-idf-sys = { version = "0.30", features = ["binstart"] }
esp-idf-svc = "0.36"
embedded-svc = "0.16"
esp-idf-hal = "0.32"
embedded-hal = "0.2.6"
quick-xml = "0.22"
time = { version = "0.3", features = ["macros", "formatting"] }
# embedded-graphics = { git = "https://github.com/embedded-graphics/embedded-graphics" }
embedded-graphics = "0.7"
# embedded-graphics-core = "0.3"
embedded-layout = "0.2"
embedded-layout-macros = "0.1"
embedded-text = "0.5"
tinytga = "0.4"
epd-waveshare = { path = "epd-waveshare" }
url = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum_dispatch = "0.3"
array-init = "2.0"

[build-dependencies]
embuild = "0.28"
anyhow = "1"
